Fixed broken css : "Fixed some styling inside the members panel" https://app.asana.com/0/35357167518319/88137170467768

--- a/app/webroot/css/member/member-panel.css
+++ b/app/webroot/css/member/member-panel.css
@@ -373,6 +373,9 @@ form#MemberRegistration {
     font-size: 14px;
     text-transform: uppercase;
 }
+form#booking_form input.dashboard-buttons[type=submit] {
+    margin: 10px;
+}
 input.dashboard-buttons {
     color: #fff;
     background-color: #fda424;
